plugins/screencast: send frame callbacks if the window is otherwise invisible

If we don't send frame callbacks, the application might stop rendering or
throttle to single digit fps.

BUG: 464217